AM_CPPFLAGS =								\
	-I$(top_srcdir)							\
	-DG_LOG_DOMAIN=\"thunarx\"					\
	-DTHUNARX_COMPILATION						\
	-DTHUNARX_DIRECTORY=\"$(libdir)/thunarx-$(THUNARX_VERSION_API)\"	\
	$(PLATFORM_CPPFLAGS)

libthunarx_headers =							\
	thunarx.h							\
	thunarx-config.h						\
	thunarx-file-info.h						\
	thunarx-menu-provider.h						\
	thunarx-preferences-provider.h					\
	thunarx-property-page.h						\
	thunarx-property-page-provider.h				\
	thunarx-provider-factory.h					\
	thunarx-provider-plugin.h					\
	thunarx-renamer.h						\
	thunarx-renamer-provider.h

libthunarx_includedir =							\
	$(includedir)/thunarx-$(THUNARX_VERSION_API)/thunarx

libthunarx_include_HEADERS =						\
	$(libthunarx_headers)

lib_LTLIBRARIES =							\
	libthunarx-2.la

libthunarx_2_la_SOURCES =						\
	$(libthunarx_headers)						\
	thunarx-config.c						\
	thunarx-file-info.c						\
	thunarx-menu-provider.c						\
	thunarx-preferences-provider.c					\
	thunarx-private.c						\
	thunarx-private.h						\
	thunarx-property-page.c						\
	thunarx-property-page-provider.c				\
	thunarx-provider-factory.c					\
	thunarx-provider-module.c					\
	thunarx-provider-module.h					\
	thunarx-provider-plugin.c					\
	thunarx-renamer.c						\
	thunarx-renamer-provider.c

libthunarx_2_la_CFLAGS =						\
	$(GLIB_CFLAGS)							\
	$(GIO_CFLAGS)							\
	$(GTK_CFLAGS)							\
	$(GMODULE_CFLAGS)						\
	$(PLATFORM_CFLAGS)

libthunarx_2_la_LDFLAGS =						\
	-export-dynamic							\
	-export-symbols-regex "^[^_].*"					\
	-no-undefined							\
	-version-info $(THUNARX_VERINFO)				\
	$(PLATFORM_LDFLAGS)

libthunarx_2_la_LIBADD =						\
	$(GLIB_LIBS)							\
	$(GMODULE_LIBS)							\
	$(GIO_LIBS)							\
	$(GTK_LIBS)

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = thunarx-2.pc

EXTRA_DIST =								\
	abicheck.sh							\
	thunarx.symbols

##
## Rules to auto-generate built sources
##
## This is a bit tricky with automake, and non-trivial to implement. The
## rules below seem to work fine and don't seem to break the build, but
## they are only enabled in maintainer mode, so arbitrary users don't get
## trapped in automake's oddities. Therefore we ship the autogenerated
## files as part of the dist tarball.
##
if MAINTAINER_MODE
CLEANFILES =								\
	actual-abi							\
	expected-abi

TESTS =									\
	abicheck.sh

endif

# required for gtk-doc
dist-hook: all

# vi:set ts=8 sw=8 noet ai nocindent syntax=automake:
