AM_CPPFLAGS =								\
	-I$(top_srcdir)							\
	-DG_LOG_DOMAIN=\"thunarx\"					\
	-DTHUNARX_COMPILATION						\
	-DTHUNARX_DIRECTORY=\"$(libdir)/thunarx-$(THUNARX_VERSION_API)\"	\
	$(PLATFORM_CPPFLAGS)

libthunarx_headers =							\
	thunarx.h							\
	thunarx-config.h						\
	thunarx-file-info.h						\
	thunarx-menu.h							\
	thunarx-menu-item.h						\
	thunarx-menu-provider.h						\
	thunarx-preferences-provider.h					\
	thunarx-property-page.h						\
	thunarx-property-page-provider.h				\
	thunarx-provider-factory.h					\
	thunarx-provider-module.h					\
	thunarx-provider-plugin.h					\
	thunarx-renamer.h						\
	thunarx-renamer-provider.h

libthunarx_includedir =							\
	$(includedir)/thunarx-$(THUNARX_VERSION_API)/thunarx

libthunarx_include_HEADERS =						\
	$(libthunarx_headers)

lib_LTLIBRARIES =							\
	libthunarx-3.la

libthunarx_3_la_SOURCES =						\
	$(libthunarx_headers)						\
	thunarx-config.c						\
	thunarx-file-info.c						\
	thunarx-menu.c							\
	thunarx-menu-item.c						\
	thunarx-menu-provider.c						\
	thunarx-preferences-provider.c					\
	thunarx-private.c						\
	thunarx-private.h						\
	thunarx-property-page.c						\
	thunarx-property-page-provider.c				\
	thunarx-provider-factory.c					\
	thunarx-provider-module.c					\
	thunarx-provider-plugin.c					\
	thunarx-renamer.c						\
	thunarx-renamer-provider.c

libthunarx_3_la_CFLAGS =						\
	$(GLIB_CFLAGS)							\
	$(GIO_CFLAGS)							\
	$(GTK_CFLAGS)							\
	$(GMODULE_CFLAGS)						\
	$(PLATFORM_CFLAGS)

libthunarx_3_la_LDFLAGS =						\
	-export-dynamic							\
	-export-symbols-regex "^[^_].*"					\
	-no-undefined							\
	-version-info $(THUNARX_VERINFO)				\
	$(PLATFORM_LDFLAGS)

libthunarx_3_la_LIBADD =						\
	$(GLIB_LIBS)							\
	$(GMODULE_LIBS)							\
	$(GIO_LIBS)							\
	$(GTK_LIBS)

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = thunarx-3.pc

EXTRA_DIST =								\
	abicheck.sh							\
	thunarx.symbols

CLEANFILES = $(NULL)

##
## Rules to auto-generate built sources
##
## This is a bit tricky with automake, and non-trivial to implement. The
## rules below seem to work fine and don't seem to break the build, but
## they are only enabled in maintainer mode, so arbitrary users don't get
## trapped in automake's oddities. Therefore we ship the autogenerated
## files as part of the dist tarball.
##
if MAINTAINER_MODE
CLEANFILES +=								\
	actual-abi							\
	expected-abi

TESTS =									\
	abicheck.sh

endif

# required for gtk-doc
dist-hook: all

-include $(INTROSPECTION_MAKEFILE)
#AM_DEFAULT_VERBOSITY = 1

INTROSPECTION_GIRS =
INTROSPECTION_SCANNER_ARGS = \
	--add-include-path=$(srcdir) \
	--add-include-path=$(prefix)/share/gir-1.0 \
	-I$(srcdir)/.. \
	--warn-all \
	-DTHUNARX_COMPILATION
INTROSPECTION_COMPILER_ARGS = \
	--includedir=$(srcdir) \
	--includedir=$(prefix)/share/gir-1.0 \
	--includedir=.

if HAVE_INTROSPECTION
Thunarx-3.0.gir: libthunarx-3.la
Thunarx_3_0_gir_INCLUDES = GObject-2.0 Gtk-3.0
Thunarx_3_0_gir_CFLAGS = $(INCLUDES)
Thunarx_3_0_gir_LIBS = libthunarx-3.la
Thunarx_3_0_gir_FILES = $(libthunarx_3_la_SOURCES)
INTROSPECTION_GIRS += Thunarx-3.0.gir

girdir = $(datadir)/gir-1.0/
gir_DATA = $(INTROSPECTION_GIRS)

typelibdir = $(libdir)/girepository-1.0/
typelib_DATA = $(INTROSPECTION_GIRS:.gir=.typelib)

CLEANFILES += $(gir_DATA) $(typelib_DATA)

endif

# vi:set ts=8 sw=8 noet ai nocindent syntax=automake:
