# $Id$

appsdir = $(datadir)/icons/hicolor/16x16/apps
apps_DATA =								\
	Thunar.png

stockdir = $(datadir)/icons/hicolor/16x16/stock/generic
stock_DATA =								\
	stock_thunar-templates.png

EXTRA_DIST =								\
	$(apps_DATA)							\
	$(stock_DATA)

# vi:set ts=8 sw=8 noet ai nocindent syntax=automake:
