appsdir = $(datadir)/icons/hicolor/16x16/apps
apps_DATA =								\
	Thunar.png

stockdir = $(datadir)/icons/hicolor/16x16/stock/navigation
stock_DATA =								\
	stock_folder-copy.png						\
	stock_folder-move.png						\
	stock_thunar-shortcuts.png

EXTRA_DIST =								\
	$(apps_DATA)							\
	$(stock_DATA)

# vi:set ts=8 sw=8 noet ai nocindent syntax=automake:
